--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -38,7 +38,7 @@ modules:
         scope: system
         # If no repo information is specified, Flathub will be used by default
         install: # system flatpaks we want all users to have and not remove
-          - org.mozilla.firefox
+          - org.gnome.Epiphany
           - org.gnome.Loupe
       - scope: user # Also add Flathub user repo, but no user packages
 
